<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AWeather</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="about_app">This app created \n by Yegorov A. \n 2015</string>
    <string name="about">About</string>

    <string name="sign_in_vk">Sign in VK</string>
    <string name="share_weather">Share weather</string>
    <string name="current_weather">Current weather forecast in Gorlovka!</string>
    <string name="vk_domain">vk.com/</string>
    <string name="title_activity_weather">Weather</string>
    <string name="getting_weather_info">Getting weather data.</string>


    <string name="description_profile_photo">Profile Photo</string>
    <string name="bar">Bar: </string>
    <string name="humidity">Humidity: </string>
    <string name="wind">Wind: </string>
    <string name="date">Date: </string>
    <string name="description_temp">Air temperature</string>
    <string name="description_sunrise">Time Sunrise</string>
    <string name="description_sunset">Time Sunset</string>
    <string name="sign_in">Sign in</string>
    <string name="share_title">Share this with your friends</string>
    <string name="description_vkbtn">Sign in vk.com</string>
    <string name="description_fbbtn">Sign in facebook.com</string>
    <string name="title_activity_user">UserActivity</string>

    <string name="please_wait">Please, wait...</string>
    <string name="update_weather">Update weather...</string>

    <string name="success_share">You are successfully shared!</string>

</resources>
