<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
<LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android"
        android:weightSum="1" android:id="@+id/mainLayout" android:focusableInTouchMode="false">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="247dp" android:weightSum="1">
        <ImageView
                android:layout_width="175dp"
                android:layout_height="173dp"
                android:id="@+id/userImage"/>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="user name"
                    android:id="@+id/userNameTextView" android:layout_gravity="center_horizontal"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/vk_domain"
                    android:id="@+id/domainTextView" android:layout_gravity="center_horizontal"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="university"
                    android:id="@+id/universityTextView" android:layout_gravity="center_horizontal"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/current_weather"
            android:id="@+id/textView5" android:layout_gravity="center_horizontal"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="159dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/weatherTextView" android:gravity="center"/>
    <Button
            android:layout_width="189dp"
            android:layout_height="wrap_content"
            android:text="@string/share_weather"
            android:layout_gravity="center_horizontal" android:id="@+id/shareButton" android:onClick="onClick"/>


</LinearLayout>
</ScrollView>